feat(items): trigger automatic exchange search
